--- a/.github/workflows/review-dog.yml
+++ b/.github/workflows/review-dog.yml
@@ -26,7 +26,7 @@ jobs:
       - name: tflint
         uses: reviewdog/action-tflint@master
         with:
-          github_token: ${{ secrets.github_token }}
+          github_token: ${{ secrets.TOKEN }}
           working_directory: "Terraform" # Optional. Change working directory
           reporter: github-pr-review # Optional. Change reporter
           fail_on_error: "true" # Optional. Fail action if errors are found
