--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -28,6 +28,7 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_API_TOKEN }}
         with:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_API_TOKEN }}
           github_token: ${{ secrets.REVIEWDOG_GITHUB_API_TOKEN }}
           working_directory: "Terraform" # Optional. Change working directory
           reporter: github-pr-review # Optional. Change reporter
