--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,4 +1,4 @@
-name: reviewdog1
+name: reviewdog
 on: [pull_request]
 jobs:
   tflint:
@@ -22,13 +22,19 @@ jobs:
         run: |
           terraform init
 
+      # Minimal example
+      - name: tflint
+        uses: reviewdog/action-tflint@master
+        with:
+          github_token: ${{ secrets.github_token }}
+
       # More complex example
       - name: tflint
         uses: reviewdog/action-tflint@master
         with:
-          github_token: ${{ secrets.TOKEN}}
-      - name: Run tflint with reviewdog
-        uses: reviewdog/action-tflint@v1.1.1
-
-          
-        
+          github_token: ${{ secrets.github_token }}
+          working_directory: "Terraform" # Optional. Change working directory
+          reporter: github-pr-review # Optional. Change reporter
+          fail_on_error: "true" # Optional. Fail action if errors are found
+          filter_mode: "nofilter" # Optional. Check all files, not just the diff
+          flags: "--module" # Optional. Add custom tflint flags
