--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -12,8 +12,8 @@ jobs:
       - name: tfsec
         uses: reviewdog/action-tfsec@master
         with:
-          github_token: ${{ secrets.github_token }}
-          working_directory: "testdata" # Change working directory
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          working_directory: "Terraform" # Change working directory
           reporter: github-pr-review # Change reporter
           fail_on_error: "true" # Fail action if errors are found
           filter_mode: "nofilter" # Check all files, not just the diff
