--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -38,3 +38,5 @@ jobs:
           fail_on_error: "true" # Optional. Fail action if errors are found
           filter_mode: "nofilter" # Optional. Check all files, not just the diff
           flags: "--module" # Optional. Add custom tflint flags
+          level: info
+          shellcheck_flags: --severity=style
